# PRR-Robot-ROS

./: README.md
ThrowingRobotVideos/: TR01.mkv
throwing_robot/: CMakeLists.txt  package.xml
throwing_robot/launch/: throwing_robot.rviz  throwing_robot_rviz.launch
throwing_robot/meshes/: base_link.STL  finger_1.STL  finger_2.STL  link_1.STL  link_2.STL  slider_link.STL
throwing_robot/urdf/: throwing_robot.gazebo  throwing_robot.xacro
throwing_robot_control/: CMakeLists.txt  package.xml
throwing_robot_control/config/: throwing_robot_control.yaml
throwing_robot_control/launch/: throwing_robot_control.launch
throwing_robot_gazebo/: CMakeLists.txt  package.xml
throwing_robot_gazebo/launch/: throwing_robot.launch
throwing_robot_gazebo/models/arena/: model.config  model.sdf
throwing_robot_gazebo/models/arena/meshes/: arena.STL
throwing_robot_gazebo/models/ball/: model.config  model.sdf
throwing_robot_gazebo/worlds/: throwing_robot.world
throwing_robot_python/: CMakeLists.txt  package.xml
throwing_robot_python/src/: hold_the_ball.py  initialize_robot.sh  reset_to_zero.sh  simulate_throw.sh  trajectory.py  trajectory_large.py  trajectory_small.py
