<?xml version="1.0"?>
<package format="2">
  <name>throwing_robot_control</name>
  <version>0.0.0</version>
  <description>The throwing_robot_control package</description>

  <maintainer email="sahil@todo.todo">sahil</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend>


  <export>

  </export>
</package>
