<?xml version="1.0"?>
<package format="2">
  <name>throwing_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The throwing_robot_gazebo package</description>
  <maintainer email="sahil@todo.todo">sahil</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>



  <export>

  </export>
</package>
